@@ -469,7 +469,7 @@ Preferences::on_close (GtkWidget *widget)
 	hide();
 	if (biff_->check_mode_ == AUTOMATIC_CHECK)
 		biff_->applet()->start (3);
-	biff_->applet()->update();
+	biff_->applet()->update(true);
 	biff_->applet()->show();
 }
 
@@ -517,7 +517,7 @@ Preferences::on_destroy (GtkWidget *widget,  GdkEvent *event)
 	hide ();
 	if (biff_->check_mode_ == AUTOMATIC_CHECK)
 		biff_->applet()->start (3);
-	biff_->applet()->update();
+	biff_->applet()->update(true);
 	biff_->applet()->show();
 	return true;
 }
@@ -528,7 +528,7 @@ Preferences::on_delete (GtkWidget *widget,  GdkEvent *event)
 	hide ();
 	if (biff_->check_mode_ == AUTOMATIC_CHECK)
 		biff_->applet()->start (3);
-	biff_->applet()->update();
+	biff_->applet()->update(true);
 	biff_->applet()->show();
 	return true;
 }
